Compiler_B34054082_HW2/y.output
Terminals unused in grammar

   ','


State 31 conflicts: 2 shift/reduce
State 35 conflicts: 7 shift/reduce
State 36 conflicts: 7 shift/reduce
State 37 conflicts: 7 shift/reduce
State 49 conflicts: 23 shift/reduce
State 50 conflicts: 22 shift/reduce
State 79 conflicts: 1 shift/reduce
State 81 conflicts: 1 shift/reduce
State 85 conflicts: 7 shift/reduce
State 86 conflicts: 7 shift/reduce
State 87 conflicts: 7 shift/reduce
State 88 conflicts: 7 shift/reduce
State 89 conflicts: 7 shift/reduce
State 90 conflicts: 7 shift/reduce
State 91 conflicts: 7 shift/reduce
State 92 conflicts: 7 shift/reduce
State 93 conflicts: 7 shift/reduce
State 94 conflicts: 7 shift/reduce
State 95 conflicts: 7 shift/reduce
State 96 conflicts: 7 shift/reduce
State 97 conflicts: 22 shift/reduce
State 98 conflicts: 22 shift/reduce
State 99 conflicts: 22 shift/reduce
State 100 conflicts: 22 shift/reduce
State 101 conflicts: 22 shift/reduce
State 102 conflicts: 7 shift/reduce
State 103 conflicts: 7 shift/reduce
State 114 conflicts: 22 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: StatementList

    2 StatementList: StatementList Statement
    3              | Statement

    4 Statement: DeclarationStmt NEWLINE
    5          | SimpleStmt NEWLINE
    6          | '{'
    7          | '}'
    8          | IfStmt StatementList
    9          | IfStmt StatementList ELSE StatementList
   10          | ForStmt StatementList
   11          | PrintStmt NEWLINE
   12          | NEWLINE

   13 DeclarationStmt: VAR IDENT Type
   14                | VAR IDENT Type '=' Expression
   15                | VAR IDENT '[' Expression ']' Type

   16 SimpleStmt: Expression

   17 IfStmt: IF SimpleStmt

   18 ForStmt: FOR SimpleStmt
   19        | FOR ForClause

   20 ForClause: SimpleStmt ';' SimpleStmt ';' SimpleStmt

   21 PrintStmt: PRINT '(' Expression ')'
   22          | PRINT '(' IDENT ')'
   23          | PRINTLN '(' IDENT ')'
   24          | PRINTLN '(' Expression '[' Expression ']' ')'
   25          | PRINTLN '(' Expression ')'

   26 Expression: '(' Expression ')'
   27           | Type '(' Expression ')'
   28           | Expression '[' Expression ']'
   29           | Expression '=' Expression
   30           | Expression ADD_ASSIGN Expression
   31           | Expression SUB_ASSIGN Expression
   32           | Expression MUL_ASSIGN Expression
   33           | Expression QUO_ASSIGN Expression
   34           | Expression REM_ASSIGN Expression
   35           | Expression '+' Expression
   36           | Expression '-' Expression
   37           | Expression '*' Expression
   38           | Expression '/' Expression
   39           | Expression '%' Expression
   40           | Expression '>' Expression
   41           | Expression '<' Expression
   42           | Expression EQL Expression
   43           | Expression NEQ Expression
   44           | Expression LEQ Expression
   45           | Expression GEQ Expression
   46           | Expression LOR Expression
   47           | Expression LAND Expression
   48           | '-' Expression
   49           | '+' Expression
   50           | '!' Expression
   51           | Expression INC
   52           | Expression DEC
   53           | Literal

   54 Literal: INT_LIT
   55        | FLOAT_LIT
   56        | '"' STRING_LIT '"'
   57        | TRUE
   58        | FALSE
   59        | IDENT

   60 Type: INT
   61     | FLOAT
   62     | STRING
   63     | BOOL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 50
'"' (34) 56
'%' (37) 39
'(' (40) 21 22 23 24 25 26 27
')' (41) 21 22 23 24 25 26 27
'*' (42) 37
'+' (43) 35 49
',' (44)
'-' (45) 36 48
'/' (47) 38
';' (59) 20
'<' (60) 41
'=' (61) 14 29
'>' (62) 40
'[' (91) 15 24 28
']' (93) 15 24 28
'{' (123) 6
'}' (125) 7
error (256)
INT (258) 60
FLOAT (259) 61
STRING (260) 62
BOOL (261) 63
TRUE (262) 57
FALSE (263) 58
VAR (264) 13 14 15
GEQ (265) 45
LEQ (266) 44
EQL (267) 42
NEQ (268) 43
INC (269) 51
DEC (270) 52
ADD_ASSIGN (271) 30
SUB_ASSIGN (272) 31
MUL_ASSIGN (273) 32
QUO_ASSIGN (274) 33
REM_ASSIGN (275) 34
LAND (276) 47
LOR (277) 46
NEWLINE (278) 4 5 11 12
PRINT (279) 21 22
PRINTLN (280) 23 24 25
IF (281) 17
ELSE (282) 9
FOR (283) 18 19
UMINUS (284)
INT_LIT (285) 54
FLOAT_LIT (286) 55
STRING_LIT (287) 56
IDENT (288) 13 14 15 22 23 59


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
Program (53)
    on left: 1, on right: 0
StatementList (54)
    on left: 2 3, on right: 1 2 8 9 10
Statement (55)
    on left: 4 5 6 7 8 9 10 11 12, on right: 2 3
DeclarationStmt (56)
    on left: 13 14 15, on right: 4
SimpleStmt (57)
    on left: 16, on right: 5 17 18 20
IfStmt (58)
    on left: 17, on right: 8 9
ForStmt (59)
    on left: 18 19, on right: 10
ForClause (60)
    on left: 20, on right: 19
PrintStmt (61)
    on left: 21 22 23 24 25, on right: 11
Expression (62)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    44 45 46 47 48 49 50 51 52 53, on right: 14 15 16 21 24 25 26 27
    28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    49 50 51 52
Literal (63)
    on left: 54 55 56 57 58 59, on right: 53
Type (64)
    on left: 60 61 62 63, on right: 13 14 15 27


State 0

    0 $accept: . Program $end

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    VAR        shift, and go to state 7
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '{'        shift, and go to state 12
    '}'        shift, and go to state 13
    '"'        shift, and go to state 14
    NEWLINE    shift, and go to state 15
    PRINT      shift, and go to state 16
    PRINTLN    shift, and go to state 17
    IF         shift, and go to state 18
    FOR        shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    Program          go to state 23
    StatementList    go to state 24
    Statement        go to state 25
    DeclarationStmt  go to state 26
    SimpleStmt       go to state 27
    IfStmt           go to state 28
    ForStmt          go to state 29
    PrintStmt        go to state 30
    Expression       go to state 31
    Literal          go to state 32
    Type             go to state 33


State 1

   60 Type: INT .

    $default  reduce using rule 60 (Type)


State 2

   61 Type: FLOAT .

    $default  reduce using rule 61 (Type)


State 3

   62 Type: STRING .

    $default  reduce using rule 62 (Type)


State 4

   63 Type: BOOL .

    $default  reduce using rule 63 (Type)


State 5

   57 Literal: TRUE .

    $default  reduce using rule 57 (Literal)


State 6

   58 Literal: FALSE .

    $default  reduce using rule 58 (Literal)


State 7

   13 DeclarationStmt: VAR . IDENT Type
   14                | VAR . IDENT Type '=' Expression
   15                | VAR . IDENT '[' Expression ']' Type

    IDENT  shift, and go to state 34


State 8

   49 Expression: '+' . Expression

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '"'        shift, and go to state 14
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    Expression  go to state 35
    Literal     go to state 32
    Type        go to state 33


State 9

   48 Expression: '-' . Expression

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '"'        shift, and go to state 14
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    Expression  go to state 36
    Literal     go to state 32
    Type        go to state 33


State 10

   50 Expression: '!' . Expression

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '"'        shift, and go to state 14
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    Expression  go to state 37
    Literal     go to state 32
    Type        go to state 33


State 11

   26 Expression: '(' . Expression ')'

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '"'        shift, and go to state 14
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    Expression  go to state 38
    Literal     go to state 32
    Type        go to state 33


State 12

    6 Statement: '{' .

    $default  reduce using rule 6 (Statement)


State 13

    7 Statement: '}' .

    $default  reduce using rule 7 (Statement)


State 14

   56 Literal: '"' . STRING_LIT '"'

    STRING_LIT  shift, and go to state 39


State 15

   12 Statement: NEWLINE .

    $default  reduce using rule 12 (Statement)


State 16

   21 PrintStmt: PRINT . '(' Expression ')'
   22          | PRINT . '(' IDENT ')'

    '('  shift, and go to state 40


State 17

   23 PrintStmt: PRINTLN . '(' IDENT ')'
   24          | PRINTLN . '(' Expression '[' Expression ']' ')'
   25          | PRINTLN . '(' Expression ')'

    '('  shift, and go to state 41


State 18

   17 IfStmt: IF . SimpleStmt

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '"'        shift, and go to state 14
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    SimpleStmt  go to state 42
    Expression  go to state 31
    Literal     go to state 32
    Type        go to state 33


State 19

   18 ForStmt: FOR . SimpleStmt
   19        | FOR . ForClause

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '"'        shift, and go to state 14
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    SimpleStmt  go to state 43
    ForClause   go to state 44
    Expression  go to state 31
    Literal     go to state 32
    Type        go to state 33


State 20

   54 Literal: INT_LIT .

    $default  reduce using rule 54 (Literal)


State 21

   55 Literal: FLOAT_LIT .

    $default  reduce using rule 55 (Literal)


State 22

   59 Literal: IDENT .

    $default  reduce using rule 59 (Literal)


State 23

    0 $accept: Program . $end

    $end  shift, and go to state 45


State 24

    1 Program: StatementList .
    2 StatementList: StatementList . Statement

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    VAR        shift, and go to state 7
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '{'        shift, and go to state 12
    '}'        shift, and go to state 13
    '"'        shift, and go to state 14
    NEWLINE    shift, and go to state 15
    PRINT      shift, and go to state 16
    PRINTLN    shift, and go to state 17
    IF         shift, and go to state 18
    FOR        shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    $default  reduce using rule 1 (Program)

    Statement        go to state 46
    DeclarationStmt  go to state 26
    SimpleStmt       go to state 27
    IfStmt           go to state 28
    ForStmt          go to state 29
    PrintStmt        go to state 30
    Expression       go to state 31
    Literal          go to state 32
    Type             go to state 33


State 25

    3 StatementList: Statement .

    $default  reduce using rule 3 (StatementList)


State 26

    4 Statement: DeclarationStmt . NEWLINE

    NEWLINE  shift, and go to state 47


State 27

    5 Statement: SimpleStmt . NEWLINE

    NEWLINE  shift, and go to state 48


State 28

    8 Statement: IfStmt . StatementList
    9          | IfStmt . StatementList ELSE StatementList

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    VAR        shift, and go to state 7
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '{'        shift, and go to state 12
    '}'        shift, and go to state 13
    '"'        shift, and go to state 14
    NEWLINE    shift, and go to state 15
    PRINT      shift, and go to state 16
    PRINTLN    shift, and go to state 17
    IF         shift, and go to state 18
    FOR        shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    StatementList    go to state 49
    Statement        go to state 25
    DeclarationStmt  go to state 26
    SimpleStmt       go to state 27
    IfStmt           go to state 28
    ForStmt          go to state 29
    PrintStmt        go to state 30
    Expression       go to state 31
    Literal          go to state 32
    Type             go to state 33


State 29

   10 Statement: ForStmt . StatementList

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    VAR        shift, and go to state 7
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '{'        shift, and go to state 12
    '}'        shift, and go to state 13
    '"'        shift, and go to state 14
    NEWLINE    shift, and go to state 15
    PRINT      shift, and go to state 16
    PRINTLN    shift, and go to state 17
    IF         shift, and go to state 18
    FOR        shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    StatementList    go to state 50
    Statement        go to state 25
    DeclarationStmt  go to state 26
    SimpleStmt       go to state 27
    IfStmt           go to state 28
    ForStmt          go to state 29
    PrintStmt        go to state 30
    Expression       go to state 31
    Literal          go to state 32
    Type             go to state 33


State 30

   11 Statement: PrintStmt . NEWLINE

    NEWLINE  shift, and go to state 51


State 31

   16 SimpleStmt: Expression .
   28 Expression: Expression . '[' Expression ']'
   29           | Expression . '=' Expression
   30           | Expression . ADD_ASSIGN Expression
   31           | Expression . SUB_ASSIGN Expression
   32           | Expression . MUL_ASSIGN Expression
   33           | Expression . QUO_ASSIGN Expression
   34           | Expression . REM_ASSIGN Expression
   35           | Expression . '+' Expression
   36           | Expression . '-' Expression
   37           | Expression . '*' Expression
   38           | Expression . '/' Expression
   39           | Expression . '%' Expression
   40           | Expression . '>' Expression
   41           | Expression . '<' Expression
   42           | Expression . EQL Expression
   43           | Expression . NEQ Expression
   44           | Expression . LEQ Expression
   45           | Expression . GEQ Expression
   46           | Expression . LOR Expression
   47           | Expression . LAND Expression
   51           | Expression . INC
   52           | Expression . DEC

    '>'         shift, and go to state 52
    '<'         shift, and go to state 53
    GEQ         shift, and go to state 54
    LEQ         shift, and go to state 55
    EQL         shift, and go to state 56
    NEQ         shift, and go to state 57
    '+'         shift, and go to state 58
    '-'         shift, and go to state 59
    '*'         shift, and go to state 60
    '/'         shift, and go to state 61
    '%'         shift, and go to state 62
    INC         shift, and go to state 63
    DEC         shift, and go to state 64
    '='         shift, and go to state 65
    ADD_ASSIGN  shift, and go to state 66
    SUB_ASSIGN  shift, and go to state 67
    MUL_ASSIGN  shift, and go to state 68
    QUO_ASSIGN  shift, and go to state 69
    REM_ASSIGN  shift, and go to state 70
    LAND        shift, and go to state 71
    LOR         shift, and go to state 72
    '['         shift, and go to state 73

    '+'       [reduce using rule 16 (SimpleStmt)]
    '-'       [reduce using rule 16 (SimpleStmt)]
    $default  reduce using rule 16 (SimpleStmt)


State 32

   53 Expression: Literal .

    $default  reduce using rule 53 (Expression)


State 33

   27 Expression: Type . '(' Expression ')'

    '('  shift, and go to state 74


State 34

   13 DeclarationStmt: VAR IDENT . Type
   14                | VAR IDENT . Type '=' Expression
   15                | VAR IDENT . '[' Expression ']' Type

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    STRING  shift, and go to state 3
    BOOL    shift, and go to state 4
    '['     shift, and go to state 75

    Type  go to state 76


State 35

   28 Expression: Expression . '[' Expression ']'
   29           | Expression . '=' Expression
   30           | Expression . ADD_ASSIGN Expression
   31           | Expression . SUB_ASSIGN Expression
   32           | Expression . MUL_ASSIGN Expression
   33           | Expression . QUO_ASSIGN Expression
   34           | Expression . REM_ASSIGN Expression
   35           | Expression . '+' Expression
   36           | Expression . '-' Expression
   37           | Expression . '*' Expression
   38           | Expression . '/' Expression
   39           | Expression . '%' Expression
   40           | Expression . '>' Expression
   41           | Expression . '<' Expression
   42           | Expression . EQL Expression
   43           | Expression . NEQ Expression
   44           | Expression . LEQ Expression
   45           | Expression . GEQ Expression
   46           | Expression . LOR Expression
   47           | Expression . LAND Expression
   49           | '+' Expression .
   51           | Expression . INC
   52           | Expression . DEC

    INC         shift, and go to state 63
    DEC         shift, and go to state 64
    ADD_ASSIGN  shift, and go to state 66
    SUB_ASSIGN  shift, and go to state 67
    MUL_ASSIGN  shift, and go to state 68
    QUO_ASSIGN  shift, and go to state 69
    REM_ASSIGN  shift, and go to state 70
    '['         shift, and go to state 73

    INC         [reduce using rule 49 (Expression)]
    DEC         [reduce using rule 49 (Expression)]
    ADD_ASSIGN  [reduce using rule 49 (Expression)]
    SUB_ASSIGN  [reduce using rule 49 (Expression)]
    MUL_ASSIGN  [reduce using rule 49 (Expression)]
    QUO_ASSIGN  [reduce using rule 49 (Expression)]
    REM_ASSIGN  [reduce using rule 49 (Expression)]
    $default    reduce using rule 49 (Expression)


State 36

   28 Expression: Expression . '[' Expression ']'
   29           | Expression . '=' Expression
   30           | Expression . ADD_ASSIGN Expression
   31           | Expression . SUB_ASSIGN Expression
   32           | Expression . MUL_ASSIGN Expression
   33           | Expression . QUO_ASSIGN Expression
   34           | Expression . REM_ASSIGN Expression
   35           | Expression . '+' Expression
   36           | Expression . '-' Expression
   37           | Expression . '*' Expression
   38           | Expression . '/' Expression
   39           | Expression . '%' Expression
   40           | Expression . '>' Expression
   41           | Expression . '<' Expression
   42           | Expression . EQL Expression
   43           | Expression . NEQ Expression
   44           | Expression . LEQ Expression
   45           | Expression . GEQ Expression
   46           | Expression . LOR Expression
   47           | Expression . LAND Expression
   48           | '-' Expression .
   51           | Expression . INC
   52           | Expression . DEC

    INC         shift, and go to state 63
    DEC         shift, and go to state 64
    ADD_ASSIGN  shift, and go to state 66
    SUB_ASSIGN  shift, and go to state 67
    MUL_ASSIGN  shift, and go to state 68
    QUO_ASSIGN  shift, and go to state 69
    REM_ASSIGN  shift, and go to state 70
    '['         shift, and go to state 73

    INC         [reduce using rule 48 (Expression)]
    DEC         [reduce using rule 48 (Expression)]
    ADD_ASSIGN  [reduce using rule 48 (Expression)]
    SUB_ASSIGN  [reduce using rule 48 (Expression)]
    MUL_ASSIGN  [reduce using rule 48 (Expression)]
    QUO_ASSIGN  [reduce using rule 48 (Expression)]
    REM_ASSIGN  [reduce using rule 48 (Expression)]
    $default    reduce using rule 48 (Expression)


State 37

   28 Expression: Expression . '[' Expression ']'
   29           | Expression . '=' Expression
   30           | Expression . ADD_ASSIGN Expression
   31           | Expression . SUB_ASSIGN Expression
   32           | Expression . MUL_ASSIGN Expression
   33           | Expression . QUO_ASSIGN Expression
   34           | Expression . REM_ASSIGN Expression
   35           | Expression . '+' Expression
   36           | Expression . '-' Expression
   37           | Expression . '*' Expression
   38           | Expression . '/' Expression
   39           | Expression . '%' Expression
   40           | Expression . '>' Expression
   41           | Expression . '<' Expression
   42           | Expression . EQL Expression
   43           | Expression . NEQ Expression
   44           | Expression . LEQ Expression
   45           | Expression . GEQ Expression
   46           | Expression . LOR Expression
   47           | Expression . LAND Expression
   50           | '!' Expression .
   51           | Expression . INC
   52           | Expression . DEC

    INC         shift, and go to state 63
    DEC         shift, and go to state 64
    ADD_ASSIGN  shift, and go to state 66
    SUB_ASSIGN  shift, and go to state 67
    MUL_ASSIGN  shift, and go to state 68
    QUO_ASSIGN  shift, and go to state 69
    REM_ASSIGN  shift, and go to state 70
    '['         shift, and go to state 73

    INC         [reduce using rule 50 (Expression)]
    DEC         [reduce using rule 50 (Expression)]
    ADD_ASSIGN  [reduce using rule 50 (Expression)]
    SUB_ASSIGN  [reduce using rule 50 (Expression)]
    MUL_ASSIGN  [reduce using rule 50 (Expression)]
    QUO_ASSIGN  [reduce using rule 50 (Expression)]
    REM_ASSIGN  [reduce using rule 50 (Expression)]
    $default    reduce using rule 50 (Expression)


State 38

   26 Expression: '(' Expression . ')'
   28           | Expression . '[' Expression ']'
   29           | Expression . '=' Expression
   30           | Expression . ADD_ASSIGN Expression
   31           | Expression . SUB_ASSIGN Expression
   32           | Expression . MUL_ASSIGN Expression
   33           | Expression . QUO_ASSIGN Expression
   34           | Expression . REM_ASSIGN Expression
   35           | Expression . '+' Expression
   36           | Expression . '-' Expression
   37           | Expression . '*' Expression
   38           | Expression . '/' Expression
   39           | Expression . '%' Expression
   40           | Expression . '>' Expression
   41           | Expression . '<' Expression
   42           | Expression . EQL Expression
   43           | Expression . NEQ Expression
   44           | Expression . LEQ Expression
   45           | Expression . GEQ Expression
   46           | Expression . LOR Expression
   47           | Expression . LAND Expression
   51           | Expression . INC
   52           | Expression . DEC

    '>'         shift, and go to state 52
    '<'         shift, and go to state 53
    GEQ         shift, and go to state 54
    LEQ         shift, and go to state 55
    EQL         shift, and go to state 56
    NEQ         shift, and go to state 57
    '+'         shift, and go to state 58
    '-'         shift, and go to state 59
    '*'         shift, and go to state 60
    '/'         shift, and go to state 61
    '%'         shift, and go to state 62
    INC         shift, and go to state 63
    DEC         shift, and go to state 64
    '='         shift, and go to state 65
    ADD_ASSIGN  shift, and go to state 66
    SUB_ASSIGN  shift, and go to state 67
    MUL_ASSIGN  shift, and go to state 68
    QUO_ASSIGN  shift, and go to state 69
    REM_ASSIGN  shift, and go to state 70
    LAND        shift, and go to state 71
    LOR         shift, and go to state 72
    ')'         shift, and go to state 77
    '['         shift, and go to state 73


State 39

   56 Literal: '"' STRING_LIT . '"'

    '"'  shift, and go to state 78


State 40

   21 PrintStmt: PRINT '(' . Expression ')'
   22          | PRINT '(' . IDENT ')'

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '"'        shift, and go to state 14
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 79

    Expression  go to state 80
    Literal     go to state 32
    Type        go to state 33


State 41

   23 PrintStmt: PRINTLN '(' . IDENT ')'
   24          | PRINTLN '(' . Expression '[' Expression ']' ')'
   25          | PRINTLN '(' . Expression ')'

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '"'        shift, and go to state 14
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 81

    Expression  go to state 82
    Literal     go to state 32
    Type        go to state 33


State 42

   17 IfStmt: IF SimpleStmt .

    $default  reduce using rule 17 (IfStmt)


State 43

   18 ForStmt: FOR SimpleStmt .
   20 ForClause: SimpleStmt . ';' SimpleStmt ';' SimpleStmt

    ';'  shift, and go to state 83

    $default  reduce using rule 18 (ForStmt)


State 44

   19 ForStmt: FOR ForClause .

    $default  reduce using rule 19 (ForStmt)


State 45

    0 $accept: Program $end .

    $default  accept


State 46

    2 StatementList: StatementList Statement .

    $default  reduce using rule 2 (StatementList)


State 47

    4 Statement: DeclarationStmt NEWLINE .

    $default  reduce using rule 4 (Statement)


State 48

    5 Statement: SimpleStmt NEWLINE .

    $default  reduce using rule 5 (Statement)


State 49

    2 StatementList: StatementList . Statement
    8 Statement: IfStmt StatementList .
    9          | IfStmt StatementList . ELSE StatementList

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    VAR        shift, and go to state 7
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '{'        shift, and go to state 12
    '}'        shift, and go to state 13
    '"'        shift, and go to state 14
    NEWLINE    shift, and go to state 15
    PRINT      shift, and go to state 16
    PRINTLN    shift, and go to state 17
    IF         shift, and go to state 18
    ELSE       shift, and go to state 84
    FOR        shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    INT        [reduce using rule 8 (Statement)]
    FLOAT      [reduce using rule 8 (Statement)]
    STRING     [reduce using rule 8 (Statement)]
    BOOL       [reduce using rule 8 (Statement)]
    TRUE       [reduce using rule 8 (Statement)]
    FALSE      [reduce using rule 8 (Statement)]
    VAR        [reduce using rule 8 (Statement)]
    '+'        [reduce using rule 8 (Statement)]
    '-'        [reduce using rule 8 (Statement)]
    '!'        [reduce using rule 8 (Statement)]
    '('        [reduce using rule 8 (Statement)]
    '{'        [reduce using rule 8 (Statement)]
    '}'        [reduce using rule 8 (Statement)]
    '"'        [reduce using rule 8 (Statement)]
    NEWLINE    [reduce using rule 8 (Statement)]
    PRINT      [reduce using rule 8 (Statement)]
    PRINTLN    [reduce using rule 8 (Statement)]
    IF         [reduce using rule 8 (Statement)]
    ELSE       [reduce using rule 8 (Statement)]
    FOR        [reduce using rule 8 (Statement)]
    INT_LIT    [reduce using rule 8 (Statement)]
    FLOAT_LIT  [reduce using rule 8 (Statement)]
    IDENT      [reduce using rule 8 (Statement)]
    $default   reduce using rule 8 (Statement)

    Statement        go to state 46
    DeclarationStmt  go to state 26
    SimpleStmt       go to state 27
    IfStmt           go to state 28
    ForStmt          go to state 29
    PrintStmt        go to state 30
    Expression       go to state 31
    Literal          go to state 32
    Type             go to state 33


State 50

    2 StatementList: StatementList . Statement
   10 Statement: ForStmt StatementList .

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    VAR        shift, and go to state 7
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '{'        shift, and go to state 12
    '}'        shift, and go to state 13
    '"'        shift, and go to state 14
    NEWLINE    shift, and go to state 15
    PRINT      shift, and go to state 16
    PRINTLN    shift, and go to state 17
    IF         shift, and go to state 18
    FOR        shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    INT        [reduce using rule 10 (Statement)]
    FLOAT      [reduce using rule 10 (Statement)]
    STRING     [reduce using rule 10 (Statement)]
    BOOL       [reduce using rule 10 (Statement)]
    TRUE       [reduce using rule 10 (Statement)]
    FALSE      [reduce using rule 10 (Statement)]
    VAR        [reduce using rule 10 (Statement)]
    '+'        [reduce using rule 10 (Statement)]
    '-'        [reduce using rule 10 (Statement)]
    '!'        [reduce using rule 10 (Statement)]
    '('        [reduce using rule 10 (Statement)]
    '{'        [reduce using rule 10 (Statement)]
    '}'        [reduce using rule 10 (Statement)]
    '"'        [reduce using rule 10 (Statement)]
    NEWLINE    [reduce using rule 10 (Statement)]
    PRINT      [reduce using rule 10 (Statement)]
    PRINTLN    [reduce using rule 10 (Statement)]
    IF         [reduce using rule 10 (Statement)]
    FOR        [reduce using rule 10 (Statement)]
    INT_LIT    [reduce using rule 10 (Statement)]
    FLOAT_LIT  [reduce using rule 10 (Statement)]
    IDENT      [reduce using rule 10 (Statement)]
    $default   reduce using rule 10 (Statement)

    Statement        go to state 46
    DeclarationStmt  go to state 26
    SimpleStmt       go to state 27
    IfStmt           go to state 28
    ForStmt          go to state 29
    PrintStmt        go to state 30
    Expression       go to state 31
    Literal          go to state 32
    Type             go to state 33


State 51

   11 Statement: PrintStmt NEWLINE .

    $default  reduce using rule 11 (Statement)


State 52

   40 Expression: Expression '>' . Expression

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 8
    '-'        shift, and go to state 9
    '!'        shift, and go to state 10
    '('        shift, and go to state 11
    '"'        shift, and go to state 14
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    Expression  go to state 85
    Literal     go to state 32
    Type        go to state 33


State 53

   41 Expression: Expression '<' . Expression
